# salix

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/salix/: Cargo.toml
crates/salix-agent/: Cargo.toml
crates/salix-agent/src/: lib.rs  main.rs
crates/salix-config/: Cargo.toml
crates/salix-config/src/: default_values.rs  lib.rs  utils.rs
crates/salix-controller/: Cargo.toml
crates/salix-controller/src/: controller.rs  lib.rs  main.rs  web.rs
crates/salix-proto/: Cargo.toml  build.rs
crates/salix-proto/proto/: salix.proto
crates/salix-proto/src/: lib.rs
crates/salix/src/: main.rs
