[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
  "Benjamin Decreusefond",
  "Hane '309nahe' Vaillard",
  "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
]
edition = "2024"
rust-version = "1.87"
readme = "README.md"
homepage = "https://github.com/salix-rs/salix"
repository = "https://github.com/salix-rs/salix.git"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
config = "0.15.13"
gethostname = "1.0.2"
log = { version = "0.4.27", features = ["serde"] }
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
quinn = "0.11.8"
quinn-proto = "0.11.12"
rcgen = "0.14.2"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v7"] }

salix-agent = { version = "0.0.0", path = "crates/salix-agent" }
salix-config = { version = "0.0.0", path = "crates/salix-config" }
salix-controller = { path = "crates/salix-controller" }
salix-proto = { version = "0.0.0", path = "crates/salix-proto" }
