[package]
name = "salix-agent"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
quinn = "0.11.8"
quinn-proto = "0.11.12"
rustls = "0.23.27"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
salix-config = { path = "../salix-config" }

[lints]
workspace = true
