[package]
name = "salix-agent"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
gethostname.workspace = true
rustls.workspace = true
tokio.workspace = true
uuid.workspace = true

salix-config.workspace = true
salix-proto.workspace = true
