[package]
name = "salix-config"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
log.workspace = true
serde.workspace = true
