[package]
name = "salix-controller"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
salix-config = { version = "0.0.0", path = "../salix-config" }
salix-proto = { version = "0.0.0", path = "../salix-proto" }
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"

[lints]
workspace = true
