[package]
name = "salix-controller"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
uuid.workspace = true

salix-config.workspace = true
salix-proto.workspace = true
