[package]
name = "salix-proto"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = "0.13"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"

[lints]
workspace = true

[build-dependencies]
tonic-build = "0.13.1"
