[package]
name = "salix-proto"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build.workspace = true
