[package]
name = "salix"
version = "0.0.0"
description = "Manage thousands of devices blazingly fast"
keywords = ["salix"]
categories = ["concurrency"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
default-run = "salix"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rcgen.workspace = true

salix-agent.workspace = true
salix-controller.workspace = true
